<resources>
    <string name="app_name">EAGER_Study</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="MainBeginButton">Survey</string>
    <string name="Birthday_text">What is your date of birth?</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">My birthday is:</string>
    <string name="date_selected">testing date</string>
    <string name="description_text">We are interested in where you are and how you feel during your day.  Please answer each question honestly.  Your responses will be completely anonymous.</string>
    <string name="feeling_text">How are you feeling right now?</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="feeling_note">Please mark the most appropriate answer on the scale from 1 to 5</string>
    <string name="location_task1">I am:</string>
    <string name="location_choice11">Inside a building</string>
    <string name="location_choice12">Outside</string>
    <string name="location_choice13">In a vehicle</string>
    <string name="location_choice14">Other: </string>
    <string name="location_task2">I am here to (check all that apply):</string>
    <string name="locationchk1">Work for pay</string>
    <string name="locationchk2">Run errands</string>
    <string name="locationchk3">Go to the doctor</string>
    <string name="locationchk4">For entertainment</string>
    <string name="locationchk5">Attend religious service or event</string>
    <string name="locationchk6">See friends</string>
    <string name="locationchk7">Go to school</string>
    <string name="locationchk8">Eat at a restaurant</string>
    <string name="locationchk9">Volunteer</string>
    <string name="locationchk10">Shop</string>
    <string name="locationchk11">Visit with family</string>
    <string name="locationchk12">Exercise</string>
    <string name="locationchk13">Go to a government office</string>
    <string name="locationchk14">Other: </string>
    <string name="visiting_text1">To get here, I</string>
    <string name="visiting_text2">I have been here: </string>
    <string name="visiting_choice11">Walked</string>
    <string name="visiting_choice12">Biked</string>
    <string name="visiting_choice13">Drove</string>
    <string name="visiting_choice14">Used public transportation</string>
    <string name="visiting_choice15">Other: </string>
    <string name="visiting_choice21">Never, this is the first time</string>
    <string name="visiting_choice22">One or two times before</string>
    <string name="visiting_choice23">About once per month</string>
    <string name="visiting_choice24">A few times per week</string>
    <string name="visiting_choice25">Almost every day</string>
    <string name="companies_text1">I am here with (check all that apply):</string>
    <string name="companies_text2">I am with people who are (check all that apply):</string>
    <string name="companieschk11">Alone</string>
    <string name="companieschk12">My husband/wife/partner</string>
    <string name="companieschk13">My children</string>
    <string name="companieschk14">My parents</string>
    <string name="companieschk15">Other relatives</string>
    <string name="companieschk16">A friend</string>
    <string name="companieschk17">Two or more friends</string>
    <string name="companieschk18">Co-worker</string>
    <string name="companieschk19">Neighbors</string>
    <string name="companieschk110">People who I don’t know well</string>
    <string name="companieschk111">Other:</string>
    <string name="companieschk21">Men</string>
    <string name="companieschk22">Women</string>
    <string name="companieschk23">Children </string>
    <string name="companieschk24">Teenagers</string>
    <string name="companieschk25">Younger Adults</string>
    <string name="companieschk26">Middle-aged Adults</string>
    <string name="companieschk27">Older Adults</string>
    <string name="companieschk28">Whites</string>
    <string name="companieschk29">Black/African Americans</string>
    <string name="companieschk210">Hispanics/Latinos</string>
    <string name="companieschk211">Asians</string>
    <string name="companieschk212">Native Americans/American Indians</string>
    <string name="companieschk213">Bi- or Multi-Racial People</string>
    <string name="companieschk214">Other:</string>
    <string name="companies_des">If you marked alone in the previous question, please skip to the next question</string>
    <string name="place_feeling_des">Please evaluate what you think about the place where you are right now. Mark a number on the scale from 1- strongly disagree to 5- strongly agree</string>
    <string name="place_question1">This is a place I like to come to.</string>
    <string name="place_question2">People who are here seem different from me.</string>
    <string name="place_question3">I could be friends with people who are here.</string>
    <string name="place_question4">I feel like people here are watching what I am doing.</string>
    <string name="communication_text1">When in this place, I talked to…</string>
    <string name="communication_text2">When in this place, I made eye contact with…</string>
    <string name="communication_choice11">No one</string>
    <string name="communication_choice21">No one</string>
    <string name="communication_choice12">1 or 2 strangers</string>
    <string name="communication_choice22">1 or 2 strangers</string>
    <string name="communication_choice13">Many strangers</string>
    <string name="communication_choice23">Many strangers</string>
    <string name="communication_choice14">1 or 2 people I know</string>
    <string name="communication_choice24">1 or 2 people I know</string>
    <string name="communication_choice15">Many people I know</string>
    <string name="communication_choice25">Many people I know</string>
    <string name="place_sharing_text">How would you describe this place to a friend who has never been here?</string>
    <string name="place_sharing_des">Please answer with you own words</string>
    <string name="ema_text1">Where are you?</string>
    <string name="ema_choice11">At work</string>
    <string name="ema_choice12">Indoors NOT at work</string>
    <string name="ema_choice13">Outdoors</string>
    <string name="ema_choice14">In a vehicle NOT driving</string>
    <string name="ema_text2">In the area where you work, do you see</string>
    <string name="ema_choice21">A lot of people like you</string>
    <string name="ema_choice22">Some people like you</string>
    <string name="ema_choice23">Few people like you</string>
    <string name="ema_choice24">No one like you</string>
    <string name="ema_text3">How many places are there to buy a meal that you can afford in the area where you work?</string>
    <string name="ema_choice31">A lot of places</string>
    <string name="ema_choice32">Some places</string>
    <string name="ema_choice33">Very few places</string>
    <string name="ema_choice34">No place</string>
    <string name="ema_text4">How many places are there where you would shop or run errands in the area where you work?</string>
    <string name="ema_choice41">A lot of places</string>
    <string name="ema_choice42">Some places</string>
    <string name="ema_choice43">Very few places</string>
    <string name="ema_choice44">No place</string>
    <string name="ema_random1">Random Rotating Question 1</string>
    <string name="ema_random1_selection1">I feel welcome in the area where I work.</string>
    <string name="ema_random1_selection2">I feel out of place in the area where I work .</string>
    <string name="ema_random2">Random Rotating Question 2</string>
    <string name="ema_random2_selection1">I feel safe in the area where I work.</string>
    <string name="ema_random2_selection2">I would be comfortable walking alone the area where I work.</string>
    <string name="ema_random2_selection3">I feel comfortable walking in the area where I work during the day.</string>
    <string name="ema_random2_selection4">I would feel comfortable walking in the area where I work after dark.</string>
    <string name="ema_text7">I feel like I can do what I need to do in this area. </string>
    <string name="ema_text8">In this area, I feel like no one would help me if I needed it.</string>
    <string name="ema_random3">Random Rotating Question 3</string>
    <string name="ema_random3_selection1">I feel welcome in this area.</string>
    <string name="ema_random3_selection2">I feel out of place in this area.</string>
    <string name="ema_random4_selection1">I feel safe in this area.</string>
    <string name="ema_random4_selection2">I would be comfortable walking alone in this area.</string>
    <string name="ema_random4_selection3">I feel comfortable walking in this area during the day.</string>
    <string name="ema_random4_selection4">I would feel comfortable walking in this area after dark.</string>
    <string name="ema_random4">Random Rotating Question 4</string>
    <string name="ema2_text1">Are you in someone’s home?</string>
    <string name="ema2_choice11">Yes</string>
    <string name="ema2_choice12">No</string>
    <string name="ema2_text2">In the area where you are right now, do you see:</string>
    <string name="ema2_choice21">A lot of people like you</string>
    <string name="ema2_choice22">Some people like you</string>
    <string name="ema2_choice23">Few people like you</string>
    <string name="ema2_choice24">No one like you</string>
    <string name="ema2_text3">How many places are there to buy a meal that you can afford in the area where you are right now?</string>
    <string name="ema2_choice31">A lot of places</string>
    <string name="ema2_choice32">Some places</string>
    <string name="ema2_choice33">Very few places</string>
    <string name="ema2_choice34">No place</string>
    <string name="ema2_text4">How many places are there where you would shop or run errands in the area where you are right now?</string>
    <string name="ema2_choice41">A lot of places</string>
    <string name="ema2_choice42">Some places</string>
    <string name="ema2_choice43">Very few places</string>
    <string name="ema2_choice44">No place</string>
    <string name="ema2_text5">In the place where you are right now, how much trouble was it to do what you came for?</string>
    <string name="ema2_choice51">A lot of trouble</string>
    <string name="ema2_choice52">Some trouble</string>
    <string name="ema2_choice53">A little trouble</string>
    <string name="ema2_choice54">No trouble at all</string>
    <string name="ema2_text6">In the area where you are right now, do you see:</string>
    <string name="ema2_choice61">A lot of people like me</string>
    <string name="ema2_choice71">A lot of places</string>
    <string name="ema2_choice72">Some places</string>
    <string name="ema2_choice73">Very few places</string>
    <string name="ema2_choice74">No place</string>
    <string name="ema3_choice11">Shop or run errands</string>
    <string name="ema3_choice12">Entertainment/Recreation/leisure</string>
    <string name="ema3_choice13">Attend religious service or event</string>
    <string name="ema3_choice14">Other</string>
    <string name="ema3_choice21">See the doctor/dentist</string>
    <string name="ema3_choice22">Volunteer</string>
    <string name="ema3_choice23">Study</string>
    <string name="ema3_choice24">Other: </string>
    <string name="ema_formal_text2">I used public transportation to get to work.</string>
    <string name="ema_formal_choice21">Yes</string>
    <string name="ema_formal_choice22">No</string>
    <string name="ema_formal_text6">In this neighborhood, I can afford to buy meals in</string>
    <string name="ema_formal_text22">I am in this neighborhood to</string>
</resources>