<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.eager_study_UI.LocationTask" >
    <ScrollView
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ScrollView2"
    android:fadeScrollbars="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="511dp"
         android:orientation="vertical" >

    <TextView
        android:id="@+id/location_question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="15dp"
        android:text="@string/location_task1"
        android:textSize="20sp" />

        <RadioGroup
                android:id="@+id/rGrp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical" >


                <RadioButton
                    android:id="@+id/rbn11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_radio_button"
                    android:text="@string/location_choice11" />

                <RadioButton
                    android:id="@+id/rb12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_radio_button"
                    android:text="@string/location_choice12" />
                <RadioButton
                    android:id="@+id/rb13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_radio_button"
                    android:text="@string/location_choice13" />
                
                 <RadioButton
                    android:id="@+id/rb14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custom_radio_button"
                    android:text="@string/location_choice14"/>

                 <LinearLayout
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@android:color/transparent"
    android:focusable="true"
    android:focusableInTouchMode="true">
</LinearLayout>
                  <EditText
                      android:id="@+id/other1"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content" />

                  
             </RadioGroup>
 
        <TextView
        android:id="@+id/location_question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="15dp"
        android:text="@string/location_task2"
        android:textSize="20sp" />

        <LinearLayout 
    			android:layout_width="fill_parent"
    			android:layout_height="fill_parent"
    			android:orientation="vertical" >
 
    			<CheckBox
        			android:id="@+id/chk1"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:button="@drawable/checkboxselector"
        			android:text="@string/locationchk1" />
 
    			<CheckBox
        			android:id="@+id/chk2"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:button="@drawable/checkboxselector"
        			android:text="@string/locationchk2"/>
 
    			<CheckBox
        			android:id="@+id/chk3"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:button="@drawable/checkboxselector"
        			android:text="@string/locationchk3" />
    			
    			<CheckBox
        			android:id="@+id/chk4"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:button="@drawable/checkboxselector"
        			android:text="@string/locationchk4" />
    			<CheckBox
        			android:id="@+id/chk5"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:button="@drawable/checkboxselector"
        			android:text="@string/locationchk5" />
    			<CheckBox
        			android:id="@+id/chk6"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:button="@drawable/checkboxselector"
        			android:text="@string/locationchk6" />
    			<CheckBox
        			android:id="@+id/chk7"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:button="@drawable/checkboxselector"
        			android:text="@string/locationchk7" />
    			<CheckBox
        			android:id="@+id/chk8"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:button="@drawable/checkboxselector"
        			android:text="@string/locationchk8" />
    			<CheckBox
        			android:id="@+id/chk9"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:button="@drawable/checkboxselector"
        			android:text="@string/locationchk9" />
    			<CheckBox
        			android:id="@+id/chk10"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:button="@drawable/checkboxselector"
        			android:text="@string/locationchk10" />
    			<CheckBox
        			android:id="@+id/chk11"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:button="@drawable/checkboxselector"
        			android:text="@string/locationchk11" />
    			<CheckBox
        			android:id="@+id/chk12"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:button="@drawable/checkboxselector"
        			android:text="@string/locationchk12" />
    			<CheckBox
        			android:id="@+id/chk13"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:button="@drawable/checkboxselector"
        			android:text="@string/locationchk13" />
    			
    			
                 <CheckBox
                    android:id="@+id/chk14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkboxselector"
                    android:text="@string/locationchk14"/>

                  <EditText
                      android:id="@+id/other2"
                      android:layout_width="match_parent"
                      android:button="@drawable/checkboxselector"
                      android:layout_height="wrap_content" />
 
			</LinearLayout>
    <Button
        android:id="@+id/Location_Task_Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:layout_weight="0"
        android:onClick="next_button"
        android:text="Next" />
    
     </LinearLayout>
     

</ScrollView>
<RelativeLayout
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" >
<!-- 
    <com.example.eager_study_util.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        fab:fab_addButtonColorNormal="@color/white"
        fab:fab_addButtonColorPressed="@color/white_pressed"
        fab:fab_addButtonPlusIconColor="@color/half_black"
        fab:fab_labelStyle="@style/menu_labels_style"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

        <com.example.eager_study_util.FloatingActionButton
            android:id="@+id/action_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="Take Picture"
            fab:fab_colorPressed="@color/white_pressed"/>

        <com.example.eager_study_util.FloatingActionButton
            android:id="@+id/action_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="Record Audio"
            fab:fab_colorPressed="@color/white_pressed"/>

    </com.example.eager_study_util.FloatingActionsMenu>
 -->
    </RelativeLayout>
</FrameLayout>