<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout18"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
    <TextView
        android:id="@+id/ema_formal_question22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="15dp"
        android:text="@string/ema_formal_text22"
        android:textSize="25sp" />

        <RadioGroup
                android:id="@+id/rGrp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical" >


                <RadioButton
                    android:id="@+id/rbn11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_radio_button"
                    android:textSize="20sp"
                    android:text="@string/ema3_choice11" />

                <RadioButton
                    android:id="@+id/rb12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custom_radio_button"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:text="@string/ema3_choice12" />
                
                <RadioButton
                    android:id="@+id/rb13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custom_radio_button"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:text="@string/ema3_choice13" />
                
                <RadioButton
                    android:id="@+id/rb14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custom_radio_button"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:text="@string/ema3_choice14" />
             </RadioGroup>
             
        <RadioGroup
                android:id="@+id/rGrp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:orientation="vertical" >


                <RadioButton
                    android:id="@+id/rbn21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_radio_button"
                    android:textSize="20sp"
                    android:text="@string/ema3_choice21" />

                <RadioButton
                    android:id="@+id/rb22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custom_radio_button"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:text="@string/ema3_choice22" />
                
                <RadioButton
                    android:id="@+id/rb23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custom_radio_button"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:text="@string/ema3_choice23" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <RadioButton
                        android:id="@+id/rb24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_weight="1"
                        android:button="@drawable/custom_radio_button"
                        android:textSize="20sp"
                        android:text="@string/ema3_choice24" />

                    <EditText
                        android:id="@+id/other1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@+id/rb24" >

                        
                    </EditText>

                </RelativeLayout>
             </RadioGroup>
             
        <LinearLayout
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@android:color/transparent"
    android:focusable="true"
    android:focusableInTouchMode="true">
</LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/EMA_Button_back"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="left"
            android:layout_marginBottom="40dp"
            android:layout_weight="0"
            android:onClick="back_button"
            android:text="Back" />

        <Button
            android:id="@+id/EMA_Button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_weight="0"
            android:onClick="next_button"
            android:text="Next" />

    </RelativeLayout>
</LinearLayout>
</ScrollView>