<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/ema_formal_question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="15dp"
        android:text="@string/ema_formal_text2"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/rGrp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rbn11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/custom_radio_button"
            android:textSize="20sp"
            android:text="@string/ema_formal_choice21" />

        <RadioButton
            android:id="@+id/rb12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/custom_radio_button"
            android:textSize="20sp"
            android:text="@string/ema_formal_choice22" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/EMA_Button_back"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="left"
            android:layout_marginBottom="40dp"
            android:layout_weight="0"
            android:onClick="back_button"
            android:text="Back" />

        <Button
            android:id="@+id/EMA_Button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_weight="0"
            android:onClick="next_button"
            android:text="Next" />

    </RelativeLayout>

</LinearLayout>